Tried to fix whitespace

--- a/src/main.scss
+++ b/src/main.scss
@@ -4,19 +4,20 @@
 html {
   margin: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
 body {
   font-family: $primary_font;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: 0;
   animation: fadeInAnimation ease 3s;
   -webkit-animation: fadeInAnimation ease 3s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  position: fixed;
 }
 
 #root {
